# graph_coloring

./: CMakeLists.txt  cgi.c  cgi.h  coloring.c  coloring.h  consoleColors.c  consoleColors.h  main.c  matrix.c  matrix.h  matrixgraph.c  matrixgraph.h  stretchy_buffers.c  stretchy_buffers.h  test.txt  tools.c  tools.h  ~$яснительная записка.docx  Пояснительная записка.docx
canvasGraph/: index.html  init_localhost.bat
canvasGraph/assets/json/: coloredGraph.json
canvasGraph/assets/scripts/: canvasTools.js  mainScript.js  maths.js
canvasGraph/assets/scripts/Layout/: mainMenu.js
canvasGraph/assets/scripts/graph/: VertexesGeneration.js  graph.js  manually.js  models.js
canvasGraph/assets/styles/: main.less
